@@ -42,7 +42,7 @@ class BackendSearchMenu implements backend_toolbarItem {
 	 *
 	 * @var	TYPO3backend
 	 */
-	private $backendReference;
+	protected $backendReference;
 
 	/**
 	 * constructor
