@@ -1,6 +1,7 @@
 2008-03-31  Dmitry Dulepov  <dmitry@typo3.org>
 
 	* Fixed bug #7920: Filelist in IE 6 is not showing contents (thanks to Ingo Schmitt and Steffen Kamper)
+	* Fixed bug #7957: Enable backend classes for xclassing (thanks Steffen Kamper)
 
 2008-03-28  Stanislas Rolland  <typo3@sjbr.ca>
 
